--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,6 @@
 body{
     background-color: yellow;
     color: #000;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid red;
 }
