--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -645,18 +645,30 @@ input#searchOfHeader:focus~.search_history {
     cursor: pointer;
     padding: 6px 12px;
 }
-
+.shoppingCart_product_number{
+    background-color: #fff;
+    border: 2px solid #ee4e2e;
+    color: var(--primary-color);
+    position: absolute;
+    top: -7px;
+    right: -6px;
+    font-weight: 500;
+    font-size: 1.3rem;
+    border-radius: 50%;
+    padding: 1px 4px;
+}
 .shopping_products {
     position: absolute;
     background-color: #fff;
     top: 120%;
     right: 0;
-    width: 220px;
+    width: 410px;
     border-radius: 3px;
     font-size: 1.3rem;
-    box-shadow: 0 1px 5px #bbb;
+    box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.199);
     animation: fadeIn ease 0.2s;
-    display: none;
+    padding: 10px 8px;
+    /* display: none; */
 }
 
 .shopping_products::before {
@@ -670,11 +682,6 @@ input#searchOfHeader:focus~.search_history {
     border-color: transparent transparent #fff transparent;
 }
 
-.shopping_products>p {
-    margin: 0;
-    padding: 8px 16px;
-}
-
 .shopping_products>p:hover {
     color: var(--primary-color);
     cursor: pointer;
@@ -682,15 +689,87 @@ input#searchOfHeader:focus~.search_history {
     font-style: italic;
     text-decoration: underline;
 }
+/* TH giỏ hàng trống - empty cart */
+.shopping_products_list_empty{
+    text-align: center;
+    display: none;
 
-.shopping_products>p>span {
+}
+.shopping_products_list_empty img{
+    width: 60%;
+}
+.shopping_products_list_empty span{
+    display: block;
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 1.6rem;
+    padding: 20px 0px 0px 0px;;
+}
+
+/* TH giỏ hàng không trống - has products */
+.shopping_products_list_has{
+    /* display: none; */
+
+}
+.shopping_products_list_has-title{
+    /* border: 0.5px solid red;     */
+
+}
+
+.shopping_products_list_has-many{
+    /* border: 0.5px solid red;     */
+    padding-left: 0;
+}
+
+.shopping_products_list_has-detail{
+    /* border: 0.5px solid red;     */
+    display: flex;
+
+}
+.shopping_products_list_has-detail-img{
+    width: 30%;
+    height: auto;
+}
+
+.shopping_products_list_has-detail-content{
+    /* border: 0.5px solid blue;     */
+    flex: 1;
+    padding-left: 8px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+
+}
+
+.shopping_products_list_has-detail-1{
+    /* border: 0.5px solid red;     */
+    display: flex;
+    align-items: center;
+
+}
+
+.shopping_products_list_has-detail-2{
+    /* border: 0.5px solid red;     */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.shopping_products p  span{
+    padding-right: 12px;
     float: right;
+}
+.shopping_products  i{
+    color: var(--primary-color);
+    float: right;
+    display: none;
 }
 
 .shopping_products button.paynow {
     margin: 8px auto;
     height: auto;
-    padding: 5px 6px;
+    padding: 5px 14px;
     font-size: 1.3rem;
     display: block;
 }
