--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -105,3 +105,51 @@ html {
     cursor: default;
     background-color: #aeaeae;
 }
+
+/* Mũi tên trỏ lên */
+.notification::after,
+.header__nav-item-user_user-info::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -29px;
+    right: 4px;
+    border-style: solid;
+    border-width: 20px 30px;
+    border-color: transparent transparent var(--white-color) transparent;
+    z-index: -10;
+}
+.qr_info::after {
+    content: "";
+    display: block;
+    position: absolute;
+    border: 10px solid;
+    border-color: transparent transparent #fff transparent;
+    top: -20px;
+    right: 50%;
+    transform: translateX(50%);
+
+}
+
+
+.notification::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -29px;
+    right: 4px;
+    border-style: solid;
+    border-width: 20px 30px;
+    border-color: transparent transparent var(--white-color) transparent;
+}
+
+.shopping_products::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -31px;
+    right: 5px;
+    z-index: 16;
+    border: 20px solid;
+    border-color: transparent transparent #fff transparent;
+}
