--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@
     position: relative;
     display: inline-flex;
 }
+
 /* ----- Khi đã đăng nhập ------ */
 .header__nav-item-user {
     /* border: 1px solid #fff; */
@@ -41,12 +42,15 @@
 }
 
 .header__nav-item-user-name {
-    padding-top: 3px;
+    padding-top: 4px;
+    font-weight: 500;
 }
-.header__nav-item-user-name:hover{
+
+.header__nav-item-user-name:hover {
     opacity: 0.9;
 }
-.header__nav-item-user_user-info{
+
+.header__nav-item-user_user-info {
     position: absolute;
     z-index: 20;
     background-color: #fff;
@@ -60,22 +64,26 @@
     animation: fadeIn ease 0.1s;
     display: none;
 }
-.header__nav-item-user_user-info a{
+
+.header__nav-item-user_user-info a {
     border-radius: 3px;
     display: block;
     padding: 12px 16px;
     width: 100%;
 }
-.header__nav-item-user_user-info_logout{
+
+.header__nav-item-user_user-info_logout {
     color: var(--primary-color);
     text-align: right;
     font-weight: 500;
     padding-top: 4px;
 }
+
 .header__nav-item-user_user-info a:hover:not(a:last-child) {
     background-color: #ddd;
 }
-.header__nav-item-user:hover .header__nav-item-user_user-info{
+
+.header__nav-item-user:hover .header__nav-item-user_user-info {
     display: block;
 }
 
@@ -90,7 +98,7 @@
 .header__nav-item,
 .header__nav-item-link {
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: var(--white-color);
     text-decoration: none;
     font-weight: 300;
@@ -132,6 +140,8 @@ i.fa-icon {
 .header__nav-item span.contact {
     cursor: text;
     color: #fff;
+    display: inline-block;
+    margin-bottom: 2px;
 }
 
 /* ------- MÃ QR - QR CODE ----- */
@@ -611,7 +621,7 @@ input#searchOfHeader:focus~.search_history {
     position: absolute;
     background-color: #fff;
     width: 100%;
-    top: 100%;
+    top: 95%;
     right: 0;
     margin: 0;
     margin-top: 10px;
