--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,7 @@
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
-    --primary-color:#f53e2d;
+    --primary-color: #f53e2d;
 }
 
 * {
@@ -16,6 +16,7 @@ html {
     box-sizing: border-box;
 }
 
+/* Css RESPONSIVE */
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -29,32 +30,52 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -12px;
+    margin-left: -12px;
 }
-.text-bold{
+
+.grid__column_2 {
+    width: calc((100%/12)*2);
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.grid__column_8 {
+    width: calc((100%/12)*10);
+}
+
+
+
+
+.text-bold {
     font-weight: 500 !important;
 }
-@keyframes fadeIn{
-    from{
+
+@keyframes fadeIn {
+    from {
         opacity: 0;
         transform: scale(0);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: scale(1);
 
     }
 }
-@keyframes growth{
-    from{
+
+@keyframes growth {
+    from {
         transform: scale(var(--growthFrom));
     }
-    to{       
+
+    to {
         transform: scale(var(--growthTo));
     }
 }
 
 /* -------Modal --------------- */
-.modal{
+.modal {
     position: fixed;
     top: 0;
     right: 0;
@@ -63,15 +84,17 @@ html {
     display: flex;
     display: none;
 }
-.modal__overlay{
+
+.modal__overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
-.modal .modal__body{
-    --growthFrom:0.5;
-    --growthTo:1;
+
+.modal .modal__body {
+    --growthFrom: 0.5;
+    --growthTo: 1;
     width: 500px;
     margin: auto;
     background-color: var(--white-color);
@@ -95,12 +118,13 @@ html {
     outline: none;
     color: var(--white-color);
     text-decoration: none;
-    background-color:var(--primary-color);
+    background-color: var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.btns .btn.btn--disable{
+
+.btns .btn.btn--disable {
     color: #e4e4e4;
     cursor: default;
     background-color: #aeaeae;
@@ -119,6 +143,7 @@ html {
     border-color: transparent transparent var(--white-color) transparent;
     z-index: -10;
 }
+
 .qr_info::after {
     content: "";
     display: block;
