--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -852,5 +852,62 @@ input#searchOfHeader:focus~.search_history {
 
 /* ====== CONTENT ======= */
 .container {
+    background-color: rgba(223, 217, 217, 0.342);
+}
+
+/* ---- Danh mục phải ---- */
+.category {
+    /* border: 1px solid red; */
+    padding: 12px 0 8px;
+    background-color: #fff;
+    margin-bottom: 12px;
+    margin-top: 12px;
+}
+
+.category_heading {
+    margin: 0;
     font-size: 1.6rem;
+    padding-left: 12px;
+}
+
+.category_icon {
+    padding-right: 4px;
+}
+
+.category_list {
+    padding-left: 0px;
+    margin: 8px 0 0 0;
+    list-style-type: none;
+}
+
+.category_item {}
+
+.category_item--active .category_item__link {
+    color: var(--primary-color);
+}
+
+.category_item--active {
+    position: relative;
+}
+
+.category_item--active::after {
+    content: "";
+    position: absolute;
+    border: 6px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
+}
+
+.category_item__link {
+    text-decoration: none;
+    color: var(--text-color);
+    display: block;
+    padding: 6px 0px 6px 32px;
+    font-size: 1.4rem;
+}
+
+.category_item__link:hover {
+    background-color: #f5f5f5;
 }
