--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -860,14 +860,14 @@ input#searchOfHeader:focus~.search_history {
     /* border: 1px solid red; */
     padding: 12px 0 8px;
     background-color: #fff;
-    margin-bottom: 12px;
-    margin-top: 12px;
 }
 
 .category_heading {
     margin: 0;
     font-size: 1.6rem;
-    padding-left: 12px;
+    padding:0 0 12px 12px;
+    border-bottom: 1px solid #c9c3c3;
+    cursor: default;
 }
 
 .category_icon {
@@ -904,10 +904,15 @@ input#searchOfHeader:focus~.search_history {
     text-decoration: none;
     color: var(--text-color);
     display: block;
-    padding: 6px 0px 6px 32px;
-    font-size: 1.4rem;
+    padding: 8px 0px 8px 32px;
+    font-size: 1.5rem;
+    position: relative;
+    transform: right ease 0.2s;
+    right: 0px;
 }
 
 .category_item__link:hover {
+    right: 4px;
     background-color: #f5f5f5;
+    color: var(--primary-color);
 }
