--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -30,8 +30,8 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -12px;
-    margin-left: -12px;
+    margin-right: -5px;
+    margin-left: -5px;
 }
 .grid__row_1{
     padding-top: 24px;
@@ -39,8 +39,13 @@ html {
 
 .grid__column_2 {
     width: calc((100%/12)*2);
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.grid_column_2_sub{
+    width: 20%;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .grid__column_10{
