--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,7 +1000,7 @@ input#searchOfHeader:focus~.search_history {
     background-color: #fff;
     margin-left: 12px;
     font-size: 1.7rem;
-    border-radius: 4px;    
+    border-radius: 4px;
     overflow: hidden;
 }
 
@@ -1010,7 +1010,7 @@ input#searchOfHeader:focus~.search_history {
     padding: 8px 14px;
 }
 
-.home_status__control_1--disable{
+.home_status__control_1--disable {
     background-color: #eee;
     cursor: default;
 }
@@ -1020,3 +1020,28 @@ input#searchOfHeader:focus~.search_history {
 }
 
 .home_status__control--right {}
+
+/* ----- Sản phẩm ---- */
+.home_product {}
+
+.home_product__item {
+    background-color: #fff;
+    margin-bottom: 10px;
+}
+
+.home_product__item-img {
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    /* padding: 10px; */
+}
+
+.home_product__item-name {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.8rem;
+    margin-top: 8px;
+    height: 3.6rem;
+    overflow: hidden;
+}
