--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -132,7 +132,8 @@ html {
     justify-content: center;
 }
 .btn--nomal{
-    background-color: #ccc;
+    background-color: #fff;
+    color: #333;
 }
 
 .btns .btn.btn--disable {
