--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1039,6 +1039,7 @@ input#searchOfHeader:focus~.search_history {
     background-color: #fff;
     margin-bottom: 10px;
     padding: 12px 0px;
+    position: relative;
 }
 
 .home_product__item-img {
@@ -1131,3 +1132,46 @@ input#searchOfHeader:focus~.search_history {
 .home_product__item-origin_branch {}
 
 .home_product__item-origin_country {}
+
+/* Nhãn yêu thích */
+.home_product__item-branch_love {
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    line-height: 1.5rem;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    background-color:var(--primary-color);
+    color: var(--white-color);
+}
+
+.home_product__item-branch_love-icon {
+    font-size: 0.9rem;
+    margin: 0 1px 0 5px;
+}
+
+.home_product__item-branch_love-label {
+    font-size: 1rem;
+    padding-right: 4px;
+}
+    /* Nhãn giảm giá */
+.home_product__item-sale_off {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--rating-yellow-color);
+    padding: 0px 4px;
+    font-weight: 600;
+
+}
+
+.home_product__item-sale_off-number {
+    color: var(--primary-color);
+    font-size: 1.3rem;
+}
+
+.home_product__item-sale_off-label {
+    color: var(--white-color);
+}
