--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -24,15 +24,16 @@ html {
     margin: 0px auto;
 }
 
-.grid__full-width {
-    width: 100%;
-}
 
 .grid__row {
     display: flex;
     flex-wrap: wrap;
     margin-right: -5px;
     margin-left: -5px;
+}
+
+.grid__full-width {
+    width: 100%;
 }
 .grid__row_1{
     padding-top: 24px;
@@ -51,6 +52,7 @@ html {
 
 .grid__column_10{
     width: calc((100%/12)*10);
+    padding-left: 5px;
 }
 
 
@@ -211,4 +213,37 @@ html {
     z-index: 16;
     border: 20px solid;
     border-color: transparent transparent #fff transparent;
+}
+
+/* ====== PAGINATION - DIEU HUONG TRANG ======== */
+.home_product__pagination {
+}
+
+.home_product__pagination-list {
+    display: flex;
+    list-style-type: none;
+    justify-content:center;
+}
+
+.home_product__pagination-item {
+    margin: 0px 8px;
+}
+
+.home_product__pagination-link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    text-decoration: none;
+    color: #696969;
+    min-width: 40px;
+    min-height: 32px;
+    border-radius: 2px;
+}
+.home_product__pagination-link--active{
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+.home_product__pagination-link--active:hover{
+    background-color:#e55244;
 }
